# CheckFolderIntegrity

./: README.md  latest.json
.github/workflows/: rust.yml  tauri.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
